kubernetes/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-backend-keepalive: "true"
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-http-ports: "80,5678"
    service.beta.kubernetes.io/do-loadbalancer-hostname: n8n.tenderpro.pl
  name: n8n
  namespace: n8n
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 5678
      protocol: TCP
  selector:
    service: n8n
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "n8n-service"
  namespace: "n8n"
  labels:
    app: "n8n"
spec:
  ports:
  - name: "80"
    protocol: "TCP"
    port: 80
    targetPort: 5678
  selector:
    app: "n8n"
  type: "ClusterIP"
