kubernetes/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - n8n.tenderpro.pl
      secretName: letsencrypt-nginx
  rules:
  #   - http:
  #       paths:
  #         - path: /*
  #           pathType: ImplementationSpecific
  #           backend:
  #             service:
  #               name: ssl-redirect
  #               port:
  #                 name: use-annotation
    - host: n8n.tenderpro.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 80
